2019-02-03  Aurelien Jarno  <aurelien@aurel32.net>

	* stdlib/isomac.c: Include <unistd.h>.

2019-02-03  Florian Weimer  <fweimer@redhat.com>

	* include/time.h (__tzfile_default): Use int, not long int, for
	the GMT offsets.
	* time/tzfile.c (struct ttinfo): Change type of the offset member
	to int.
	(__tzfile_read): Remove useless cast.
	(__tzfile_default): Adjust prototype.
	* time/tzset.c (tz_rule): Change type of the offset member to int.
	(parse_offset): Change the type of the sign variable to int.

2019-02-03  Florian Weimer  <fweimer@redhat.com>

	[BZ #24153]
	* debug/gets_chk.c (__gets_chk): Use stdin instead of _IO_stdin.
	* libio/getchar.c (getchar): Likewise.
	* libio/getchar_u.c (getchar_unlocked): Likewise.
	* libio/getwchar.c (getwchar): Likewise.
	* libio/getwchar_u.c (getwchar_unlocked): Likewise.
	* libio/iogets.c (_IO_gets): Likewise.
	* libio/vscanf.c (_IO_vscanf): Likewise.
	* libio/vwscanf.c (__vwscanf): Likewise.
	* libio/tst-bz24153.c: New file.
	* libio/Makefile (tests): Add it.

2019-02-02  Florian Weimer  <fweimer@redhat.com>

	[BZ #14829]
	* manual/resource.texi (Basic Scheduling Functions): Add
	portability note.  Change process to task throughout the section.
	Remove incorrect comment about sched_yield as it affects
	tasks/threads, not entire processes.
	* sysdeps/unix/sysv/linux/bits/posix_opt.h
	(_POSIX_PRIORITY_SCHEDULING): Update comment.

2019-02-01  Joseph Myers  <joseph@codesourcery.com>

	* configure.ac (libc_cv_compiler_ok): Require GCC 6.2 or later.
	* configure: Regenerated.
	* manual/install.texi (Tools for Compilation): Update minimum GCC
	version.
	* INSTALL: Regenerated.

2019-02-01  Florian Weimer  <fweimer@redhat.com>

	* support/support_test_compare_string.c
	(support_test_compare_string): Use "string" in error message.
	* support/tst-test_compare_string.c (do_test): Adjust.

2019-02-01  Florian Weimer  <fweimer@redhat.com>

	* support/support_format_address_family.c