@@ -1,3 +1,8 @@
+2019-02-03  Florian Weimer  <fweimer@redhat.com>
+
+	* time/tzfile.c (__tzfile_read): Use struct alloc_buffer and its
+	implicit overflow checks.
+
 2019-02-03  Aurelien Jarno  <aurelien@aurel32.net>
 
 	* stdlib/isomac.c: Include <unistd.h>.
